environments/test-filter-env/apps/app-bus/services/bus-2/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: bus-2
    app.kubernetes.io/part-of: app-bus
  name: bus-2
  namespace: test-filter-env
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: bus-2
      app.kubernetes.io/part-of: app-bus
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: bus-2
        app.kubernetes.io/part-of: app-bus
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: bus-2
        ports:
        - containerPort: 8090
        resources: {}
      serviceAccountName: default
status: {}
