environments/test-filter-env/apps/app-bus/services/bus-2/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: bus-2
    app.kubernetes.io/part-of: app-bus
  name: bus-2
  namespace: test-filter-env
spec:
  ports:
  - name: http
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app.kubernetes.io/name: bus-2
    app.kubernetes.io/part-of: app-bus
status:
  loadBalancer: {}
